<!--
  ~ Copyright (c) 2019. SCODEID
  -->

<resources
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="MissingDefaultResource">
    <string name="app_name" tools:keep="@string/app_name">ScholarshipExpertScodeIdev2019</string>
    <string name="app_name_submission_1">yoMovie</string>
    <string name="app_language">en-US</string>


    <string name="main_date_year_2019"> © 2018 – 2019</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard" tools:keep="@string/title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="navigation_drawer_open" tools:keep="@string/navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:keep="@string/navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>

    <string name="title_activity_main_navigation_drawer" tools:keep="@string/title_activity_main_navigation_drawer">MainNavigationDrawerActivity</string>

    <string name="option_movies_sort_movies" tools:keep="@string/option_movies_sort_movies">Sort Movies</string>
    <string name="option_movies_yomovie_web" tools:keep="@string/option_movies_yomovie_web">yoMovie Web</string>
    <string name="option_movies_option_menu">Option Menu</string>

    <string name="menu_navigation_bottom_movies_tv_show">Tv Show</string>
    <string name="menu_drawer_movies_setting">Setting</string>
    <string name="menu_drawer_movies_language">Language</string>

    <string name="main_author_name" tools:keep="@string/main_author_name">Yogi Arif Widodo</string>
    <!--
    # HINT
    # activity_movie_catalogue_main_content
    content_home
     -->
    <string name="title_activity_movie_catalogue_main" tools:keep="@string/title_activity_movie_catalogue_main">MovieCatalogueMainActivity</string>

    <string name="activity_movie_catalogue_main_content_home">HOME</string>
    <string name="activity_movie_catalogue_main_content_popular">POPULAR</string>
    <string name="activity_movie_catalogue_main_content_trailer">TRAILER</string>
    <string name="activity_movie_catalogue_main_content_saved">SAVED</string>
    <string name="activity_movie_catalogue_main_content_soon">Soon</string>

    <!--
    END OF activity_movie_catalogue_main_content
     -->


    <!--
        # HINT
        # fragment_movies_tv_show_recycler
        -->

    <string name="fragment_movies_tv_show_hot">HOT</string>
    <string name="fragment_movies_tv_show_new_release">NEW RELEASE</string>
    <string name="fragment_movies_tv_show_detail_play_now">Play Now</string>
    <string name="fragment_movies_tv_show_detail_creator">Creator</string>
    <string name="fragment_movies_tv_show_detail_status">Status</string>
    <string name="fragment_movies_tv_show_detail_network">Network</string>
    <string name="fragment_movies_tv_show_detail_type">Type</string>

    <!-- END OF fragment_movies_tv_show_recycler-->

    <!--
        # HINT
        # item_movies_
     -->
    <string name="item_movies_movie_name">Movie Name</string>
    <string name="item_movies_overview_movie">OverView Movie</string>
    <string name="item_movies_more_info" tools:keep="@string/item_movies_more_info">More Info</string>

    <string name="item_movies_0_viewer" tools:keep="@string/item_movies_0_viewer">0 Viewer</string>
    <string name="item_movies_tap_details">Tap Here</string>
    <string name="item_movies_99_views">99 Views</string>
    <string name="item_movies_tv_shows_free">Free</string>

    <!-- # HINT
         # frag_movie_ -->
    <string name="frag_movie_dialog_coming_soon">Coming Soon</string>
    <string name="frag_movie_dialog_close">CLOSE</string>

    <!--
        # HINT
        # activity_movie_catalogue_detail
        # activity_movie_catalogue_det
        content_home
        -->
    <string name="title_activity_movie_catalogue_detail">MovieCatalogueDetailActivity</string>

    <string name="activity_movie_catalogue_detail_movie_name">Yogi Go Google i/o 2019</string>
    <string name="activity_movie_catalogue_detail_user_score" tools:keep="@string/activity_movie_catalogue_detail_user_score">Like</string>
    <string name="activity_movie_catalogue_detail_99">99</string>
    <string name="activity_movie_catalogue_detail_play">Play</string>
    <string name="activity_movie_catalogue_det_overview">Overview</string>
    <string name="activity_movie_catalogue_det_lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam consequuntur cum, dicta facilis fugit incidunt ipsam itaque, maiores molestiae mollitia numquam quam repellendus sapiente tempora temporibus ut velit vitae.</string>
    <string name="activity_movie_catalogue_det_featured_crew">Featured Crew</string>
    <string name="activity_movie_catalogue_det_director">Director</string>
    <string name="activity_movie_catalogue_det_yogi_arif_widodo">Yogi Arif Widodo</string>
    <string name="activity_movie_catalogue_det_screenplay">Screenplay</string>
    <string name="activity_movie_catalogue_det_original_language">Original Language</string>
    <string name="activity_movie_catalogue_det_indonesia">Indonesia</string>
    <string name="activity_movie_catalogue_det_runtime">Runtime</string>
    <string name="activity_movie_catalogue_det_9h_99m">9h 99m</string>
    <string name="activity_movie_catalogue_det_budget">Budget</string>
    <string name="activity_movie_catalogue_det_999_999">$999.999</string>
    <string name="activity_movie_catalogue_det_revenue">Revenue</string>
    <string name="activity_movie_catalogue_det_genres">Genres</string>
    <string name="activity_movie_catalogue_det_fantasy">Fantasy</string>
    <string name="activity_movie_catalogue_det_keywords">Keywords</string>
    <string name="activity_movie_catalogue_det_super_power_one_piece">Super Power One Piece</string>
    <string name="activity_movie_catalogue_release">Release</string>
    <string name="activity_movie_catalogue_release_2019">2019</string>
    <string name="activity_movie_catalogue_det_recommendation">Recommendation</string>
    <string name="activity_movie_catalogue_detail_rank_last_week">Rank Last Week</string>
    <string name="activity_movie_catalogue_detail_rank_last_today">Rank Last Today</string>
    <string name="activity_movie_catalogue_detail_score">Score</string>
    <string name="activity_movie_catalogue_detail_coming" tools:keep="@string/activity_movie_catalogue_detail_coming">We are sorry , button on coming soon</string>

    <!--
    # HINT
    # THIS FOR WARNING ACTIVITY
    # activity_coming_soon_
     -->
    <string name="activity_coming_soon_we_are_sorry">
            We are sorry about this feature, still have maintenance. If you have any question , please visit our
            \n https://www.themoviedb.org/faq/general
            \n or contact us on visit here
            \n https://www.themoviedb.org/about/staying-in-touch  </string>
    <string name="activity_coming_soon_hei_bro">Hei bro …</string>
    <string name="activity_coming_soon_back">Back</string>

    <!--
        # HINT
        # TOOLBAR
        # option_search
        # NAVIGASI
         -->


    <string name="option_search">Search</string>
    <string name="option_hint">Search Movie</string>
    <string name="google" tools:keep="@string/google">Google Io 2019</string>
    <string name="activity_movie_catalogue_detail_adult">Adult</string>
    <string name="activity_movie_catalogue_detail_popularity">Popularity</string>
    <string name="activity_movie_catalogue_detail_vote_count">Vote Count</string>
    <string name="activity_movie_catalogue_detail_adult_desc">Content is not adult</string>
    <string name="activity_movie_catalogue_detail_adult_desc_1">This content is adult , only +18</string>
    <string name="activity_movie_catalogue_detail_language">English</string>
    <string name="activity_movie_catalogue_detail_language_ja">Japan</string>
    <string name="activity_no_internet_conn_body1">Check quota/WI-FI or get notification while you have connection to internet</string>
    <string name="activity_no_internet_conn_head1">No Internet Connection</string>
    <string name="activity_no_internet_conn_get_notification">GET NOTIFICATION</string>
    <string name="activity_no_internet_conn_try_again">TRY AGAIN</string>
    <string name="activity_movie_catalogue_detail_original_name">Original Name</string>
    <string name="fragment_movies_tv_show_detail_origin_name">Original Name</string>
    <string name="fragment_movies_tv_show_detail_origin_country">Original Country</string>
    <string name="activity_main_favorite_delete_tap_for_delete">TAP FOR DELETE</string>
    <string name="toast_sql_lite_insert_success">Success add to favorite</string>
    <string name="toast_sql_lite_insert_fail">Failed add to favorite</string>
    <string name="dialog_cancel_title">Cancel</string>
    <string name="dialog_cancel_msg">You want to cancel the change ?</string>
    <string name="dialog_delete_msg">You want to delete the item ?</string>
    <string name="dialog_delete_title">Delete Item</string>
    <string name="dialog_positive_yes">YES</string>
    <string name="dialog_positive_no">NO</string>
    <string name="navigation_bottom_movie_favorite">Favorite</string>
    <string name="activity_main_favorite_movies_this_day">This Day</string>
    <string name="activity_main_favorite_movies_yesterday">Yesterday</string>
    <string name="activity_main_favorite_manage_favorite_movie">Manage Favorite Movie</string>
    <string name="activity_main_favorite_manage_favorite_tv_show">Manage Favorite Tv Show</string>
    <string name="option_hint_tv">Search TV SHOW</string>
    <string name="view_model_search_keyword">Keywords :</string>
    <string name="view_model_search_info">is not found</string>

    <!--setting-->
    <string name="title_activity_settings_reminder" translatable="false">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <!---->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">News</string>
    <string name="notification_channel_id_1" translatable="false">fcm_channel1</string>
    <string name="notification_channel_id_2" translatable="false">fcm_channel2</string>
    <string name="notification_channel_name_1" translatable="false">DailyToken</string>
    <string name="notification_channel_name_2" translatable="false">DailyRelease</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribed" translatable="false">Subscribed to </string>
    <string name="movie_catalogue_main_activity_do_subscribe">you had been setting daily reminder</string>


</resources>

