<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. SCODEID
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_tv_show"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/menu_navigation_bottom_movies_tv_show"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_favorite_red_600_24dp"
            android:title="@string/title_notifications"/>

</menu>
