<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. SCODEID
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".submission.notification.NoInternetConnActivity">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_header_info"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="@string/activity_no_internet_conn_head1"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.575"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_body_info"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/activity_no_internet_conn_body1"
            android:textAllCaps="false"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/text_header_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_get_notif"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_no_internet_conn_get_notification"
            app:layout_constraintTop_toBottomOf="@+id/text_body_info"
            app:layout_constraintEnd_toEndOf="@+id/text_body_info"
            app:layout_constraintStart_toStartOf="@+id/text_body_info"
            android:layout_marginTop="64dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_try_against"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_no_internet_conn_try_again"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_get_notif"
            app:layout_constraintEnd_toEndOf="@+id/button_get_notif"
            app:layout_constraintStart_toStartOf="@+id/button_get_notif"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/ic_airplay_blue_24dp"
            app:layout_constraintStart_toStartOf="@+id/text_body_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_try_against"
            app:layout_constraintEnd_toEndOf="@+id/button_try_against"
            app:layout_constraintHorizontal_bias="0.4"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_logo"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_movies_yomovie_web"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="@+id/image_logo"
            app:layout_constraintStart_toEndOf="@+id/image_logo"
            app:layout_constraintBottom_toBottomOf="@+id/image_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintVertical_bias="0.31"/>

</androidx.constraintlayout.widget.ConstraintLayout>