<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. SCODEID
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".submission.notification.ComingSoonActivity">

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_poster_robinhood_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"

            android:text="@string/activity_coming_soon_hei_bro"
            android:textSize="40sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"

            android:elevation="4dp"

            app:cardCornerRadius="@dimen/card_all_radius_16dp"
            app:cardUseCompatPadding="true"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UnusedAttribute">

        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:padding="@dimen/padding_all_text_note_16dp"

                android:autoLink="web"
                android:text="@string/activity_coming_soon_we_are_sorry"
                android:textSize="16sp"
                android:textStyle="bold"

                android:gravity="center"
                />


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"

            android:elevation="12dp"

            android:text="@string/activity_coming_soon_back"

            app:elevation="12dp"

            app:icon="@drawable/ic_arrow_back_black_24dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            tools:ignore="UnusedAttribute"/>

</androidx.constraintlayout.widget.ConstraintLayout>